--- a/start/requirements.txt
+++ b/start/requirements.txt
@@ -9,4 +9,6 @@ marshmallow-sqlalchemy==0.10.0
 psycopg2==2.6.2
 python-editor==1.0.1
 SQLAlchemy==1.1.0b3
+tinydb==3.2.1
 tornado==4.4.1
+xmltodict==0.10.2
