fully working generate_app till sqlite db, migration and upsert()

--- a/.gitignore
+++ b/.gitignore
@@ -83,14 +83,19 @@ celerybeat-schedule
 # dotenv
 .env
 
-# virtualenv
-bin/
-venv/
-ENV/
-Include/
-Scripts/
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+tcl
+pyvenv.cfg
+.venv
 pip-selfcheck.json
-tcl/
 
 # Spyder project settings
 .spyderproject
