cleaned a lot. added tinydb model (skeleton) replaced json by simplejson (much better for numeric etc)

--- a/start/alembic.ini
+++ b/start/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = migrations
-sqlalchemy.url = postgresql://powtest:powtest@localhost:5432/powtest
+sqlalchemy.url = sqlite:///sql.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
