--- a/start/requirements.txt
+++ b/start/requirements.txt
@@ -7,6 +7,7 @@ MarkupSafe==0.23
 marshmallow==2.10.1
 marshmallow-sqlalchemy==0.10.0
 python-editor==1.0.1
+simplejson==3.10.0
 SQLAlchemy==1.1.0b3
 tinydb==3.2.1
 tornado==4.4.1
