--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ var/
 .installed.cfg
 *.egg
 .vscode/
+out*.txt
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
